3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

server/monster.c: Add missing "break" statement in monster_can_pick(). It did
   prevent some monsters from picking up scrolls.
Andreas Kirschbaum 2005-09-08

common/{anim.c, image.c, los.c, map.c, porting.c, treasure.c},
include/define.h, random_maps/treasure.c, 
server/{apply.c, c_misc.c, c_object.c, c_wiz.c, commands.c, daemon.c,
hiscore.c, init.c, login.c, player.c, plugins.c, resurrection.c, weather.c},
socket/{init.c, item.c, loop.c, lowlevel.c}: Use LOG() for error messages and
   debug output instead of stdout/stderr. Include filename in error messages.
server/resurrection.c: Fix error message in read_player().
Andreas Kirschbaum 2005-09-04

socket/item.c: Make selecting objects from ground view work again.
common/object.c: Fix update of player's ground view in insert_ob_in_map().
   Previously the ground view was not updated after applying exits or after
   being hit by a spell.
Andreas Kirschbaum 2005-09-03

Fix bug #1102991 (Duplicate grapical display of the same monster):
doc/Developers/protocol: Change semantics of map_scroll command to what the
   server actually does: big faces outside the viewable area are cleared. Add
   newmap command.
include/newserver.h: Increase MAX_HEAD_OFFSET to 8 (the size of a Greater
   Demon).
socket/request.c:
   MapRedrawCmd(): Disable mapredraw command; it is now just ignored.
   MapNewmapCmd(): Clear map state before sending newmap command.
   check_head(): Remove redundant code.
   update_space(): Move invariant condition out of loop to speed it up. Fix
      uninitialized variable. Remove redundant condition. Fix off-by-one array
      access.